<resources>
    <string name="app_name">dSploit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">dSploit</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report is going to be sent to my
        developer to help fix the issue :)
    </string>
    <string name="toggle_button">ToggleButton</string>
    <string name="enter_redirection_details">Enter redirection details below:</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="target">Target</string>
    <string name="unknown">unknown</string>
    <string name="services">Services</string>
    <string name="os">OS</string>
    <string name="device_type">Device Type</string>
    <string name="start_hijack">Tap on a session to start hijacking, long tap to save it to file.
    </string>
    <string name="sort">Sort:</string>
    <string name="select_module">Select a module to run</string>
    <string name="choose">Choose</string>
    <string name="response">Response</string>
    <string name="request">Request</string>
    <string name="wait_for_response">Wait for a response</string>
    <string name="protocol">Protocol</string>
    <string name="dsploit_catchphrase">dSploit - An Android network penetration suite.</string>
    <string name="dsploit_copyleft">Copyleft of Simone Margaritelli aka evilsocket.</string>
    <string name="dsploit_url">http://www.dsploit.net/</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="dsploit_disclaimer">
        <![CDATA[This application is not to be used for any purposes other than to demonstrate its functions, and must only be used on networks for which you have permission to do so. Any other use is not the responsibility of the developer.In other words, don&apos;t be stupid, and don&apos;t direct angry people towards me.]]></string>
    <string name="license">License</string>
    <string name="gpl_license">This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by the Free Software
        Foundation, either version 3 of the License, or (at your option) any later version.
        This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
        without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the GNU General Public License for more details.
        You should have received a copy of the GNU General Public License along with this program.
        If not, see http://www.gnu.org/licenses/.
    </string>
    <string name="service">Service</string>
    <string name="stopped">Stopped&#8230;</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopped_dots">Stopped &#8230;</string>
    <string name="starting_dots">Starting &#8230;</string>
    <string name="max_length">Max Length</string>
    <string name="min_length">Min Length</string>
    <string name="username">Username</string>
    <string name="Charset">Charset</string>
    <string name="filter_desc">Enter a custom replace filter, including simple string replacement or
        regular expressions.
    </string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="wake_on_lan">Wake On Lan</string>
    <string name="send">Send</string>
    <string name="update_available">Update Available</string>
    <string name="new_update_desc">A new update to version</string>
    <string name="new_update_desc2">is available, do you want to download it ?</string>
    <string name="checking">Checking&#8230;</string>
    <string name="no_updates_available">No updates available.</string>
    <string name="new_msf_update_desc">A MetasploitFramework update</string>
    <string name="new_version">New version</string>
    <string name="new_version2">found!</string>
    <string name="downloading_update">Downloading update&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_occured">An error occurred while downloading the update.</string>
    <string name="invalid_target">Invalid target.</string>
    <string name="add_custom_target">Add custom target</string>
    <string name="enter_url">Enter an URL, host name or ip address below:</string>
    <string name="net_discovery_stopped">Network discovery stopped.</string>
    <string name="net_discovery_started">Network discovery started.</string>
    <string name="start_monitor">Start Network Monitor</string>
    <string name="stop_monitor">Stop Network Monitor</string>
    <string name="start_msfrpcd">Start MetaSploit RPCD</string>
    <string name="stop_msfrpcd">Stop MetaSploit RPCD</string>
    <string name="exit">Exit</string>
    <string name="close_confirm">This will close dSploit, are you sure you want to continue ?
    </string>
    <string name="press_back">Press back again to close this app.</string>
    <string name="selected_">Selected&#160;</string>
    <string name="github_issues">https://github.com/evilsocket/dsploit/issues/new</string>
    <string name="no_session_found">No session file found on sd card.</string>
    <string name="select_session_file">Select a session file from the sd card :</string>
    <string name="select_session">Select Session</string>
    <string name="invalid_session">Invalid session name.</string>
    <string name="session_saved_to">Session saved to &#160;</string>
    <string name="save_session">Save Session</string>
    <string name="enter_session_name">Enter the name of the session file :</string>
    <string name="new_session_started">New session started</string>
    <string name="warning">Warning</string>
    <string name="warning_new_session">Starting a new session would delete the current one,
        continue?
    </string>
    <string name="fatal_error_html">
        <![CDATA[<p>It seems like your ROM has the <b>LD_LIBRARY_PATH bug</b>, i\'m sorry but it\'s not compatible with dSploit.</p>]]></string>
    <string name="fatal_error_html2">
        <![CDATA[<p>For more info read the <a href=\"http://dsploit.net/#faq\">FAQ</a>.</p>]]></string>
    <string name="install_error">Error during files installation!</string>
    <string name="arm_error">
        <![CDATA[<p>It seems like your device processor is not an ARM, i\'m sorry but it\'s not compatible with dSploit.</p>]]></string>
    <string name="arm_error2">
        <![CDATA[<p>For more info read the <a href=\"http://dsploit.net/#requirements\">requirements</a> section.</p>]]></string>
    <string name="busybox_required">Full BusyBox installation required, killall binary not
        found(maybe you have an old busybox version).
    </string>
    <string name="only_4_root">This application can run only on rooted devices.</string>
    <string name="initializing">Initializing&#8230;</string>
    <string name="initialization_error">Initialization Error</string>
    <string name="target_alias">Target Alias</string>
    <string name="set_alias">Set an alias for this target:</string>
    <string name="no_connectivity">No connectivity available.</string>
    <string name="wifi_key_copied">WiFi key copied to clipboard.</string>
    <string name="connected_to"><![CDATA[Connected to <b>]]></string>
    <string name="connected_to2"><![CDATA[</b> with key <b><font color=\"green\">]]></string>
    <string name="connected_to3"><![CDATA[</font></b> !]]></string>
    <string name="connection_to"><![CDATA[Connection to <b>]]></string>
    <string name="connection_to2">
        <![CDATA[</b> <b><font color=\"red\">FAILED</font></b>.]]></string>
    <string name="enter_key_or_crack">Enter WiFi Key or attempt cracking:</string>
    <string name="enter_wifi_key">Enter WiFi Key:</string>
    <string name="scanning">Scanning&#8230;</string>
    <string name="invalid_filename">Invalid file name.</string>
    <string name="something_went_wrong">Something went wrong, please select again a valid target.
    </string>
    <string name="selected">Selected</string>
    <string name="nothing_found"><![CDATA[<small><i>Nothing Found</i></small>]]></string>
    <string name="no_open_ports">No open ports detected on current target, run the service inspector first.</string>
    <string name="no_exploits_found">No exploits found.</string>
    <string name="no_open_ports_focused_scan">No open ports found, run the port scanner before selecting a focused scan.</string>
    <string name="no_open_ports_exploitfinder">No exploits found on this target, run the ExploitFinder first.</string>
    <string name="choose_method">Choose a method:</string>
    <string name="menu_new_session">New Session</string>
    <string name="menu_save_session">Save Session</string>
    <string name="menu_restore_session">Restore Session</string>
    <string name="menu_stop_monitor">Stop Network Monitor</string>
    <string name="menu_submit_issue">Submit Issue</string>
    <string name="menu_about">About</string>
    <string name="pref_general">General</string>
    <string name="pref_modules">Modules</string>
    <string name="pref_msf">MetaSploit Framework</string>
    <string name="pref_performance">Performance</string>
    <string name="pref_check_updates">Check for Updates</string>
    <string name="pref_wake_lock">Wake Lock</string>
    <string name="pref_save_path">Save Path</string>
    <string name="pref_debug_error_logging">Debug Error Logging</string>
    <string name="pref_enable_profiler">Code Profiler</string>
    <string name="pref_sniffer_sample_time">Sniffer Sample Time</string>
    <string name="pref_http_proxy_port">HTTP Proxy Port</string>
    <string name="pref_http_server_port">HTTP Server Port</string>
    <string name="pref_https_redirect">SSL Stripping</string>
    <string name="pref_https_redirector_port">HTTPS Redirector Port</string>
    <string name="pref_http_max_buffer_size">HTTP Max Buffer Size</string>
    <string name="pref_password_filename">Password Sniffer File</string>
    <string name="pref_check_updates_desc">Check for updates every time the application is started.</string>
    <string name="pref_wake_lock_desc">Prevents the device going in sleep mode while the application is running.</string>
    <string name="pref_save_path_desc">Global save path to put every log file.</string>
    <string name="pref_debug_error_logging_desc">Enable or disable error logging on a debug file.</string>
    <string name="pref_enable_profiler_desc">Enable or disable network code profiler logging.</string>
    <string name="pref_sniffer_sample_time_desc">Sample time in seconds of the sniffer module network statistics.</string>
    <string name="pref_http_proxy_port_desc">MITM transparent proxy port to listen on, change this if you have problems starting the proxy.</string>
    <string name="pref_http_server_port_desc">MITM http server port to listen on, change this if you have problems starting the server.</string>
    <string name="pref_https_redirect_desc">Redirect traffic from HTTPS to HTTP.</string>
    <string name="pref_https_redirector_port_desc">MITM https redirection server port to listen on.</string>
    <string name="pref_http_max_buffer_size_desc">Max buffer size of HTTP requests handled by the transparent proxy.</string>
    <string name="pref_password_filename_desc">Name of the file to use to log passwords and cookies.</string>
    <string name="pref_rpc_user">RPC username</string>
    <string name="pref_rpc_user_desc">Username for connect to MetaSploit RPCD.</string>
    <string name="pref_rpc_pswd">RPC password</string>
    <string name="pref_rpc_pswd_desc">Password for connect to MetaSploit RPCD.</string>
    <string name="pref_performance_vuln_desc">Search for vulnerability using</string>
    <string name="pref_performance_exploit_desc">Search exploits</string>
</resources>