<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/add"
            android:title="Add"
            android:icon="@drawable/target_add"
            android:showAsAction="always"/>
    <item
            android:id="@+id/scan"
            android:title="Scan"
            android:icon="@drawable/ic_refresh"
            android:showAsAction="always"/>
    <item
            android:id="@+id/wifi_scan"
            android:title="WiFi Scan"
            android:icon="@drawable/ic_wifi_signal_4"
            android:showAsAction="always"/>

    <group android:id="@+id/session_group">
        <item
                android:id="@+id/new_session"
                android:title="@string/menu_new_session"/>
        <item
                android:id="@+id/save_session"
                android:title="@string/menu_save_session"/>
        <item
                android:id="@+id/restore_session"
                android:title="@string/menu_restore_session"/>
        <item
                android:id="@+id/settings"
                android:title="@string/menu_settings"/>
    </group>
    <group android:id="@+id/misc_group">
        <item
                android:id="@+id/ss_monitor"
                android:title="@string/menu_stop_monitor"/>
        <item
                android:id="@+id/submit_issue"
                android:title="@string/menu_submit_issue"/>
        <item
                android:id="@+id/about"
                android:title="@string/menu_about"/>
    </group>

</menu>