<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

        <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:text="@string/filter_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView1"
                android:layout_alignRight="@+id/textView1"
                android:layout_below="@+id/textView1">

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:text="@string/from"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/app_color"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:text="@string/to"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/app_color"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_alignRight="@+id/linearLayout1"
                android:layout_below="@+id/linearLayout1">

            <EditText
                    android:id="@+id/fromText0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

            <EditText
                    android:id="@+id/toText0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout2"
                android:layout_alignRight="@+id/linearLayout2"
                android:layout_below="@+id/linearLayout2">

            <EditText
                    android:id="@+id/fromText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

            <EditText
                    android:id="@+id/toText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout3"
                android:layout_alignRight="@+id/linearLayout3"
                android:layout_below="@+id/linearLayout3">

            <EditText
                    android:id="@+id/fromText2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

            <EditText
                    android:id="@+id/toText2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout4"
                android:layout_alignRight="@+id/linearLayout4"
                android:layout_below="@+id/linearLayout4">

            <EditText
                    android:id="@+id/fromText3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

            <EditText
                    android:id="@+id/toText3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout5"
                android:layout_alignRight="@+id/linearLayout5"
                android:layout_below="@+id/linearLayout5">

            <EditText
                    android:id="@+id/fromText4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

            <EditText
                    android:id="@+id/toText4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:inputType="text"
                    android:ems="10"/>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>